--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -42,3 +42,13 @@ Ver o tamanho das pastas<br>
 ```
 du -sh Docker
 ```
+
+Saber o IP<br>
+```
+ifconfig
+```
+
+Ver qual é o IP do servidor<br>
+```
+nslookup localhost
+```
