--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -49,3 +49,15 @@ Para remover apenas dois containers basta colocar os dois primeiros dígitos do 
 ```
 docker rm 05 7a
 ```
+
+Limpeza. Veja quais containers estejam dorando<br>
+```
+docker ps
+```
+
+Pare todos os containers.<br>
+```
+docker stop id1 id2 id3
+docker ps -a
+docker container prune -f
+```
