--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -7,103 +7,142 @@ Abra outra janela<br>
 docker run -it busybox
 ```
 Verifique os números IP dos containers em cada janela<br>
+```
 hostname -i
 hostname
+```
+172.17.0.2<br>
+135774e941a8<br>
 
-172.17.0.2
-135774e941a8
+172.17.0.3<br>
+135774e941a8o<br>
 
-172.17.0.3
-135774e941a8o
+Para que um container reconheça outro pelo Aliases<br>
+hostname é interno, name é externo<br>
 
-para que um container reconheça outro pelo Aliases
-hostname é interno, name é externo
-
-abra o terminal id 13
+Abra o terminal id 13<br>
+```
 exit
-
+```
+```
 docker run -it --name busybox1 -h busybox-one busybox
 hostname
 hostname -i
-
+```
 abra o terminal id 06
+```
 exit
+```
 
+```
 docker run -it --name busybox2 -h busybox-two busybox
 hostname
 hostname -i
+```
 
+```
 docker network ls
+```
 
-copie o id da bridge
-0e195bb2ae21
+Copie o id da bridge<br>
+0e195bb2ae21<br>
 
+```
 docker network inspect bridge
 docker network create custom
-8d
+```
+8d<br>
 
+```
 docker network inspect custom
+```
 
-saia dos dois terminais
+saia dos dois terminais<br>
+```
 exit
+```
 
-e elimine todas as instâncias
+e elimine todas as instâncias<br>
+```
 docker container prune -f
 docker ps -a
+```
 
-abra dois terminais
+abra dois terminais<br>
+```
 docker run -it --network custom busybox
 hostname -i
 hostname
+```
 
-172.18.0.2
-317653a37985
+172.18.0.2<br>
+317653a37985<br>
 
-172.18.0.3
-36b6a47edc2e
+172.18.0.3<br>
+36b6a47edc2e<br>
 
-agora faremos um ping do IP final 2 para o final 3, por IP e por hostname
+Agora faremos um ping do IP final 2 para o final 3, por IP e por hostname<br>
+```
 ping 172.18.0.3
 ping 36b6a47edc2e
+```
 
-Conclusão: Containers na rede custom se comunicam com hostnames.
-e não conseguem se comunicar com os nomes dinâmicos de hosts.
+Conclusão: Containers na rede custom se comunicam com hostnames.<br>
+e não conseguem se comunicar com os nomes dinâmicos de hosts.<br>
 
-__Using custom persistent names for connectivity in the custom network
-saia dos dois terminais
+Using custom persistent names for connectivity in the custom network<br>
+saia dos dois terminais<br>
+```
 exit
+```
 
+```
 docker run -it --network custom --name busybox1 busybox
 docker run -it --network custom --name busybox2 busybox
 docker ps
+```
 
-na janela do busybox1
+na janela do busybox1<br>
+```
 ping busybox2
 ping 0e22d7f144a0
+```
 
+```
 hostname -i
 hostname
+```
 
-172.18.0.2
-5a91c70cbed6
+172.18.0.2<br>
+5a91c70cbed6<br>
 
-172.18.0.3
-0e22d7f144a0
+172.18.0.3<br>
+0e22d7f144a0<br>
 
+```
 docker network inspect custom
 docker inspect busybox1
 docker inspect busybox2
+```
 
-na janela do busybox1
+na janela do busybox1<br>
+```
 exit
 docker ps
 docker ps -a
+```
 
+```
 docker start -i busybox1
 ping busybox2
+```
 
-na janela do busybox2
+na janela do busybox2<br>
+```
 ping busybox1
+```
 
-saia dos dois terminais
+saia dos dois terminais<br>
+```
 exit
+```
