--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -61,3 +61,8 @@ docker stop id1 id2 id3
 docker ps -a
 docker container prune -f
 ```
+
+ACESSO ao HOST pelo Windows ou Mac<br>
+```
+docker run -it --rm --privileged --pid=host justincormack/nsenter1
+```
