--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -52,3 +52,27 @@ Ver qual é o IP do servidor<br>
 ```
 nslookup localhost
 ```
+
+# Instalar programas
+
+#### Chrome
+```
+wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+sudo apt install ./google-chrome-stable_current_amd64.deb
+```
+#### Notepad++
+```
+sudo apt-get update
+sudo apt-get install notepadqq
+```
+#### Veracrypt
+https://www.veracrypt.fr/en/Downloads.html
+
+
+# Desinstalar programas
+
+```
+dpkg --list
+sudo apt-get --purge remove nome-do-programa
+sudo aptitude remove program
+```
