--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -66,3 +66,11 @@ ACESSO ao HOST pelo Windows ou Mac<br>
 ```
 docker run -it --rm --privileged --pid=host justincormack/nsenter1
 ```
+
+Limpeza da lista dos containers<br>
+```
+docker ps
+docker ps -a
+docker container prune -f
+docker ps -a
+```
