--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -68,7 +68,11 @@ sudo apt-get install notepadqq
 #### Veracrypt
 https://www.veracrypt.fr/en/Downloads.html
 
-
+#### Visual Studio Code
+```
+sudo apt-get update
+sudo apt-get install code 
+```
 # Desinstalar programas
 
 ```
