--- a/01.Install.md
+++ b/01.Install.md
@@ -1,6 +1,16 @@
 # Instalação do Docker
 https://docs.docker.com/engine/install/ubuntu/
 
+## No CentOS
+### Instalação do Sistema Operacional
+Baixar a ISO<br>
+http://isoredirect.centos.org/centos/7/isos/x86_64/
+
+Exclua as partições do Disco<br>
+Selecione Servidor com GUI<br>
+Bibliotecas de Compatibilidade<br>
+Ferramentas de Administração de Sistema<br>
+
 ## No Ubuntu
 ###  Passo 01
 Atualizar o sistema<br>
