--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -53,7 +53,19 @@ Ver qual é o IP do servidor<br>
 nslookup localhost
 ```
 
-# Instalar programas
+# Instalar programas (CentOS)
+
+#### Chrome
+```
+wget https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+sudo yum localinstall google-chrome-stable_current_x86_64.rpm
+```
+update<br>
+```
+cat /etc/yum.repos.d/google-chrome.repo
+```
+
+# Instalar programas (Ubuntu)
 
 #### Chrome
 ```
