--- a/01.Install.md
+++ b/01.Install.md
@@ -10,6 +10,43 @@ Exclua as partições do Disco<br>
 Selecione Servidor com GUI<br>
 Bibliotecas de Compatibilidade<br>
 Ferramentas de Administração de Sistema<br>
+https://docs.docker.com/engine/install/centos/<br>
+
+### Passo 01
+Setup do repositório<br>
+```
+sudo yum install -y yum-utils
+
+sudo yum-config-manager \
+    --add-repo \
+    https://download.docker.com/linux/centos/docker-ce.repo
+```
+
+### Passo 02
+Instalar Docker Engine<br>
+```
+sudo yum install docker-ce docker-ce-cli containerd.io
+```
+Veja se a fingerprint está correta e aceite<br>
+```
+060A 61C5 1B55 8A7F 742B 77AA C52F EB6B 621E 9F35,
+```
+### Passo 03
+Inicie o Docker<br>
+```
+sudo systemctl start docker
+```
+### Passo 04
+Inclua o usuário atual no grupo Docker<br>
+```
+whoami
+sudo usermod -aG docker usuario
+```
+### Passo 05
+Reiniciar o sistema.<br>
+```
+reboot
+```
 
 ## No Ubuntu
 ###  Passo 01
