--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -74,3 +74,8 @@ docker ps -a
 docker container prune -f
 docker ps -a
 ```
+
+Listar imagens com a formatação desejada<br>
+```
+docker ps -a --format "table {{.ID}}\t{{.Image}}\t{{.Names}}"
+```
