--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -79,3 +79,13 @@ Listar imagens com a formatação desejada<br>
 ```
 docker ps -a --format "table {{.ID}}\t{{.Image}}\t{{.Names}}"
 ```
+
+Copiar arquivos para dentro do container<br>
+```
+docker cp dados.csv relaxed_hypatia:/home/jovyan/work/dados.csv
+```
+
+Copiar arquivos para dentro do container<br>
+```
+docker cp dados.csv relaxed_hypatia:/home/jovyan/work/dados.csv
+```
