--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -82,10 +82,10 @@ docker ps -a --format "table {{.ID}}\t{{.Image}}\t{{.Names}}"
 
 Copiar arquivos para dentro do container<br>
 ```
-docker cp dados.csv relaxed_hypatia:/home/jovyan/work/dados.csv
+docker cp config.php id_do_container:/var/www/html/config/config.php
 ```
 
-Copiar arquivos para dentro do container<br>
+Copiar arquivos para fora do container. Copiará para a pasta que estiver. Use pwd para saber.<br>
 ```
-docker cp dados.csv relaxed_hypatia:/home/jovyan/work/dados.csv
+docker cp id_do_container:/var/www/html/config/config.php config.php
 ```
