--- a/07.GuiaPlayWithDocker.md
+++ b/07.GuiaPlayWithDocker.md
@@ -1,1 +1,10 @@
 https://www.docker.com/play-with-docker<br>
+
+https://labs.play-with-docker.com/<br>
+```
+docker run -dp 80:80 docker/getting-started:pwd
+```
+Clique na porta 80 da tela para abrir o resultado<br>
+```
+docker run -d -p 80:80 dockersamples/101-tutorial
+```
