--- a/07.GuiaPlayWithDocker.md
+++ b/07.GuiaPlayWithDocker.md
@@ -8,3 +8,5 @@ Clique na porta 80 da tela para abrir o resultado<br>
 ```
 docker run -d -p 80:80 dockersamples/101-tutorial
 ```
+Creating Containers from Scratch<br>
+https://youtu.be/8fi7uSYlOdc<br>
