--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -78,6 +78,19 @@ wget https://az764295.vo.msecnd.net/stable/a5d1cc28bb5da32ec67e86cc50f84c67cc690
 sudo yum localinstall code-1.46.0-1591780147.el7.x86_64.rpm
 ```
 
+#### 7-zip
+Ainda testando<br>
+```
+sudo yum install epel-release
+sudo yum install p7zip
+
+wget https://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/7/x86_64/Packages/p/p7zip-16.02-10.el7.x86_64.rpm
+wget https://www.mirrorservice.org/sites/dl.fedoraproject.org/pub/epel/7/x86_64/Packages/p/p7zip-plugins-16.02-10.el7.x86_64.rpm
+
+sudo rpm -U --quiet p7zip-16.02-10.el7.x86_64.rpm
+sudo rpm -U --quiet p7zip-plugins-16.02-10.el7.x86_64.rpm
+```
+
 # Instalar programas (Ubuntu)
 
 #### Chrome
