--- a/02.Producao.md
+++ b/02.Producao.md
@@ -25,3 +25,10 @@ Vamos dar o comando para que a imagem inicie junto com o docker.<br>
 ```
 docker update --restart=always 98
 ```
+
+Para verificar:<br>
+```
+docker inspect -f "{{ .HostConfig.RestartPolicy }}" <container_id>
+docker inspect -f "{{ .RestartCount }}" <container_id>
+docker inspect -f "{{ .State.StartedAt }}" <container_id>
+```
