--- a/08.Docker-compose.md
+++ b/08.Docker-compose.md
@@ -1,4 +1,4 @@
-# Intall
+# Install
 https://docs.docker.com/compose/install/<br>
 
 Run this command to download the current stable release of Docker Compose:<br>
@@ -9,10 +9,6 @@ Apply executable permissions to the binary:<br>
 ```
 sudo chmod +x /usr/local/bin/docker-compose
 ```
-Note: If the command docker-compose fails after installation, check your path. You can also create a symbolic link to /usr/bin or any other directory in your path.<br>
-```
-sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
-```
 Testar<br>
 ```
 docker-compose --version
@@ -21,4 +17,9 @@ Install command completion<br>
 ```
 cd /etc/bash_completion.d/
 sudo curl -L https://raw.githubusercontent.com/docker/compose/1.26.0/contrib/completion/bash/docker-compose -o /etc/bash_completion.d/docker-compose
+```
+# Possíveis erros
+Note: If the command docker-compose fails after installation, check your path. You can also create a symbolic link to /usr/bin or any other directory in your path.<br>
+```
+sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 ```
