--- a/08.Docker-compose.md
+++ b/08.Docker-compose.md
@@ -23,3 +23,7 @@ Note: If the command docker-compose fails after installation, check your path. Y
 ```
 sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
 ```
+
+#Comandos
+
+https://docs.docker.com/compose/reference/<br>
