--- a/02.Producao.md
+++ b/02.Producao.md
@@ -32,3 +32,14 @@ docker inspect -f "{{ .HostConfig.RestartPolicy }}" <container_id>
 docker inspect -f "{{ .RestartCount }}" <container_id>
 docker inspect -f "{{ .State.StartedAt }}" <container_id>
 ```
+
+Lista de todos os containers com id, status de restart e quantidadede (de restart)<br>
+```
+docker inspect -f "{{.Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}" $(docker container ls -q)
+```
+
+Explicando:<br>
+Este comando lista todos os ids dos containers que estão ativos. Para incluir todos adicione -a.<br>
+```
+$(docker container ls -a -q)
+```
