--- a/02.Producao.md
+++ b/02.Producao.md
@@ -39,7 +39,7 @@ docker inspect -f "{{.Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}"
 ```
 
 Explicando:<br>
-Este comando lista todos os ids dos containers que estão ativos. Para incluir todos adicione -a.<br>
+Este comando lista todos os ids dos containers que estão rodando. Para incluir todos adicione -a.<br>
 ```
 $(docker container ls -a -q)
 ```
