--- a/02.Producao.md
+++ b/02.Producao.md
@@ -43,3 +43,12 @@ Este comando lista todos os ids dos containers que estão rodando. Para incluir 
 ```
 $(docker container ls -a -q)
 ```
+# Formatando a saída
+https://docs.docker.com/config/formatting/<br>
+Use aspas simples externamente, internamente use aspas duplas como no exemplo a seguir:<br>
+Este exemplo separa o id quando encontra a letra "e".<br>
+Entrada c81e8baea8<br>
+Saída c81 8ba a8<br>
+```
+docker inspect -f '{{split .Id "e"}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}' $(docker container ls -q)
+```
