--- a/02.Producao.md
+++ b/02.Producao.md
@@ -52,3 +52,7 @@ Saída c81 8ba a8<br>
 ```
 docker inspect -f '{{split .Id "e"}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}' $(docker container ls -q)
 ```
+Tamanho do campo<br>
+```
+docker inspect -f '{{len .Id}} {{.HostConfig.RestartPolicy.Name}} {{.RestartCount}}' $(docker container ls -q)
+```
