--- a/07.GuiaPlayWithDocker.md
+++ b/07.GuiaPlayWithDocker.md
@@ -1,3 +1,14 @@
+_______________________________________________________________
+__Acessar______________________________________________________
+https://labs.play-with-docker.com/
+https://www.docker.com/play-with-docker
+
+docker -v
+
+
+
+
+_______________________________________________________________
 https://www.docker.com/play-with-docker<br>
 
 https://labs.play-with-docker.com/<br>
