--- a/07.GuiaPlayWithDocker.md
+++ b/07.GuiaPlayWithDocker.md
@@ -1,14 +1,11 @@
-_______________________________________________________________
-__Acessar______________________________________________________
-https://labs.play-with-docker.com/
-https://www.docker.com/play-with-docker
-
+# Acessar
+https://labs.play-with-docker.com/<br>
+https://www.docker.com/play-with-docker<br>
+```
 docker -v
+```
 
 
-
-
-_______________________________________________________________
 https://www.docker.com/play-with-docker<br>
 
 https://labs.play-with-docker.com/<br>
