--- a/04.ConhecendoMais.md
+++ b/04.ConhecendoMais.md
@@ -1,3 +1,18 @@
+# Pesquisas
+## Lista de Retorno
+Ordenar pelas portas<>
+```
+docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 3 )
+```
+Ordenar pelos nomes<>
+```
+docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 2 )
+```
+Ordenar pelos ids<>
+```
+docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 1 )
+```
+
 Procurar as imagens que comecem com a palavra minha<br>
 ```
 docker images | grep minha
