--- a/12.Performance.md
+++ b/12.Performance.md
@@ -20,9 +20,21 @@ docker run \
 ```
 grep "model" /proc/cpuinfo
 ```
-## Quantidade
+## Quantidade disponível
 ```
 grep "model name" /proc/cpuinfo | wc -l
+```
+## Limitar a Quantidade
+```
+docker run \
+  -d \
+  -p 8081:80 \
+  --name nginxCPU \
+  --restart=always \
+  -m 200mb \
+  --cpuset-cpus 0-1
+  nginx
+
 ```
 
 # Container
