--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -21,3 +21,23 @@ function docker () {
     fi
 }
 ```
+
+```
+docker ps -a | perl -ne '@cols = split /\s{2,}/, $_; printf "%30s %20s %30s\n", $cols[1], $cols[3], $cols[4]'
+```
+Saída:<br>
+```
+                        IMAGE              CREATED                         STATUS
+                         nginx          3 hours ago         Exited (0) 3 hours ago
+                         nginx          3 hours ago         Exited (0) 3 hours ago
+                         nginx          4 hours ago         Exited (0) 3 hours ago
+               jenkins/jenkins          4 hours ago       Exited (143) 3 hours ago
+                   postgres:10          4 hours ago         Exited (0) 3 hours ago
+                         mongo         18 hours ago         Exited (0) 3 hours ago
+                rancher/server         21 hours ago        Exited (0) 21 hours ago
+         phpmyadmin/phpmyadmin           2 days ago        Exited (0) 29 hours ago
+                     mysql:5.7           2 days ago        Exited (0) 21 hours ago
+    bitnami/moodle:3-debian-10           2 days ago          Exited (0) 2 days ago
+bitnami/mariadb:10.3-debian-10           2 days ago          Exited (0) 2 days ago
+
+```
