--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -1,7 +1,7 @@
 # Personalizar busca
 ## docker ps -p
 Podemos colorir a exibição dos itens para ficar mais fácil de identificar.<br>
-Crie um arquivo na pasta pessoal<br>
+Crie um arquivo na pasta pessoal, ou cole direto em /etc/bashrc<br>
 ```
 cd ~
 touch .bashrc
