--- a/02.Producao.md
+++ b/02.Producao.md
@@ -1,7 +1,9 @@
 # Iniciar Docker com a máquina
 ```
-sudo systemctl start docker
 sudo systemctl status docker
+sudo systemctl start docker
+sudo systemctl stop docker
+sudo systemctl restart docker
 sudo systemctl enable docker
 ```
 
