--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -1,16 +1,16 @@
 # Personalizar busca
-## docker ps -p
-Podemos colorir a exibição dos itens para ficar mais fácil de identificar.<br>
-Crie um arquivo na pasta pessoal, ou cole direto em /etc/bashrc<br>
+A personalização do comando docker ps é simples, basta criar um arquivo na pasta pessoal.<br>
 ```
 cd ~
 touch .bashrc
 gedit .bashrc
 ```
-Cole o código abaixo e salve:<br>
+Atenção: não atribua os parâmetros reservados que podem ser vistos em docker ps --help: (-a, -f, -n, -l, -q, -s)<br>
+
+## docker ps -t
 ```
 function docker () {
-    if [[ "$@" == "ps -p" ]]; then
+    if [[ "$@" == "ps -t" ]]; then
         command docker ps --all --format "{{.ID}}\t{{.Names}}\t{{.Image}}\t{{.Ports}}\t{{.Status}}" \
             | (echo -e "CONTAINER_ID\tNAMES\tIMAGE\tPORTS\tSTATUS" && cat) \
             | awk '{printf "\033[1;32m%s\t\033[01;38;5;95;38;5;196m%s\t\033[00m\033[1;34m%s\t\033[01;90m%s %s %s %s %s %s %s\033[00m\n", $1, $2, $3, $4, $5, $6, $7, $8, $9, $10;}' \
@@ -21,11 +21,22 @@ function docker () {
     fi
 }
 ```
+SAÍDA:<br>
+```
 
 ```
-docker ps -a | perl -ne '@cols = split /\s{2,}/, $_; printf "%30s %20s %30s\n", $cols[1], $cols[3], $cols[4]'
+
+## docker ps -u
 ```
-Saída:<br>
+function docker () {
+    if [[ "$@" == "ps -u" ]]; then
+        
+    else
+        command docker "$@"
+    fi
+}
+```
+SAÍDA:<br>
 ```
                         IMAGE              CREATED                         STATUS
                          nginx          3 hours ago         Exited (0) 3 hours ago
@@ -39,5 +50,11 @@ Saída:<br>
                      mysql:5.7           2 days ago        Exited (0) 21 hours ago
     bitnami/moodle:3-debian-10           2 days ago          Exited (0) 2 days ago
 bitnami/mariadb:10.3-debian-10           2 days ago          Exited (0) 2 days ago
+```
+
+
 
 ```
+docker ps -a | perl -ne '@cols = split /\s{2,}/, $_; printf "%30s %20s %30s\n", $cols[1], $cols[3], $cols[4]'
+```
+
