--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -21,8 +21,35 @@ function docker () {
     fi
 }
 ```
-SAÍDA:<br>
+SAÍDA (colunas são coloridas, não foi possível demostrar aqui):<br>
 ```
+CONTAINER_ID   NAMES   IMAGE   PORTS STATUS     
+2d25aba85ede   admiring_newton   nextcloud   Exited (0) 24 hours ago  
+3b0ea005351c   App01   php:7.1.26-apache   Exited (0) 3 days ago  
+25714f25773e   bitnami-moodle_mariadb_1   bitnami/mariadb:10.3-debian-10   Exited (0) 2 days ago  
+1c7862ffa880   bitnami-moodle_moodle_1   bitnami/moodle:3-debian-10   Exited (0) 2 days ago  
+e99eaeff8999   drupal   drupal   Exited (0) 4 days ago  
+4881e604353c   elated_neumann   nextcloud   Exited (0) 24 hours ago  
+895f576ff2f1   gifted_lehmann   owncloud   Exited (0) 23 hours ago  
+1bb866edd983   jenkins   jenkins/jenkins   Exited (143) 5 hours ago  
+2001f6e0be92   joomla22JUN   joomla   Exited (0) 4 days ago  
+4da9bb2dd5aa   ls-server   lightstreamer   0.0.0.0:80->8080/tcp Up 3 minutes   
+81c7fd9fa6ca   lucid_antonelli   phpmyadmin/phpmyadmin   Exited (0) 2 days ago  
+9ab45431bace   lucid_sammet   plone   Exited (137) 4 days ago  
+49f30d9f7a9c   mediawiki   mediawiki   Exited (0) 4 days ago  
+d3195e6bd55a   mongo   mongo   Exited (0) 5 hours ago  
+416df0ec470d   mysql.5.7   mysql:5.7   Exited (0) 23 hours ago  
+885a02020ee0   mysql.5.7.External   mysql:5.7   Exited (0) 24 hours ago  
+20829996bc54   mysql.5.7.wp   mysql:5.7   Exited (0) 24 hours ago  
+12725c7f68f9   nginx   nginx   Exited (0) 5 hours ago  
+14cebbf8241c   nginx200mb   nginx   0.0.0.0:8080->80/tcp Up 3 minutes   
+c6d1833148f4   nginxCPU   nginx   0.0.0.0:8081->80/tcp Up 3 minutes   
+44c80911220f   nuxeo   nuxeo   Exited (137) 4 days ago  
+c81e8baea872   phpmyadmin   phpmyadmin/phpmyadmin   Exited (0) 31 hours ago  
+ab9317a045ca   postgres   postgres:10   Exited (0) 5 hours ago  
+79c1b49de655   rancher   rancher/server   Exited (0) 23 hours ago  
+14e3f088da00   redmine   redmine   Exited (1) 4 days ago  
+46970f25b93c   trusting_tu   adminer   Exited (0) 4 days ago  
 
 ```
 
@@ -30,7 +57,7 @@ SAÍDA:<br>
 ```
 function docker () {
     if [[ "$@" == "ps -u" ]]; then
-        
+        command docker ps -a | perl -ne '@cols = split /\s{2,}/, $_; printf "%30s %20s %30s\n", $cols[1], $cols[3], $cols[4]'        
     else
         command docker "$@"
     fi
@@ -51,10 +78,3 @@ SAÍDA:<br>
     bitnami/moodle:3-debian-10           2 days ago          Exited (0) 2 days ago
 bitnami/mariadb:10.3-debian-10           2 days ago          Exited (0) 2 days ago
 ```
-
-
-
-```
-docker ps -a | perl -ne '@cols = split /\s{2,}/, $_; printf "%30s %20s %30s\n", $cols[1], $cols[3], $cols[4]'
-```
-
