--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -78,3 +78,32 @@ SAÍDA:<br>
     bitnami/moodle:3-debian-10           2 days ago          Exited (0) 2 days ago
 bitnami/mariadb:10.3-debian-10           2 days ago          Exited (0) 2 days ago
 ```
+
+Testar<br>
+```
+docker ps -q | xargs -n 1 docker inspect | jq '.[0].NetworkSettings.Ports +{} | map(select(. != null)[0].HostPort) | map("-L \(.):localhost:\(.)") ' | sed -n 's/.*"\(.*\)".*/\1/p' |xargs boot2docker ssh -N
+
+docker ps -a --format "table {{.ID}}\t{{.Names}}\t{{.Ports}}" | (read -r; printf "%s\n" "$REPLY"; sort -k 3 )
+
+docker ps | sed -e 's/ /\+/g' -e 's/CONTAINER ID/CONTAINER_ID/' | tr -s '+' '\t' | q -t 'select c1,substr(c7, 0, 40),c2,c6 from -' | column -t
+
+docker stats --no-stream $( docker ps -q ) | sed -e "$( docker ps --format "{{.ID}} {{.Names}}" | sed -e "s/\(.*\) \(.*\)/s\/\1\/\2\t\/g;/" )"
+
+docker ps | perl -ple "s/\$/\n\n/g;s/\s{2,}/\n/g;s/(Up)/\\e\[32m\$1\\e\[0m/g;s/(Down)/\\e\[31m\\e\[5m\$1\\e\[25m\\e\[0m/g;s/^([^\n]+)/\\e\[1m\$1\\e\[0m/g;s/(\w+?)$/\\e\[4m\$1\\e\[24m/g" | more
+
+docker container ls -n 2
+
+docker container ls -f "status=exited"
+
+# show whole Docker info 
+$ docker info --format “{{json .}}” | jq . 
+# show Plugins only 
+$ docker info --format “{{json .Plugins}}” | jq . 
+# list IP addresses for all containers connected to ‘bridge’ network $ docker network inspect bridge -f ‘{{json .Containers}}’ \
+    | jq ‘.[] \
+    | {cont: .Name, ip: .IPv4Address}’
+    
+#Monitoramento
+watch -n 2 'docker ps --format "table {{.ID}}\t {{.Image}}\t {{.Status}}"'
+
+```
