--- a/13.Personalizando.md
+++ b/13.Personalizando.md
@@ -91,6 +91,33 @@ function docker () {
 ```
 SAÍDA:<br>
 ```
+CONTAINER ID        NAMES                      PORTS
+25714f25773e        bitnami-moodle_mariadb_1   
+1c7862ffa880        bitnami-moodle_moodle_1    
+885a02020ee0        mysql.5.7.External         
+2d25aba85ede        admiring_newton            
+81c7fd9fa6ca        lucid_antonelli            
+4881e604353c        elated_neumann             
+895f576ff2f1        gifted_lehmann             
+20829996bc54        mysql.5.7.wp               
+9ab45431bace        lucid_sammet               
+2001f6e0be92        joomla22JUN                
+46970f25b93c        trusting_tu                
+c81e8baea872        phpmyadmin                 
+416df0ec470d        mysql.5.7                  
+49f30d9f7a9c        mediawiki                  
+ab9317a045ca        postgres                   
+14e3f088da00        redmine                    
+1bb866edd983        jenkins                    
+79c1b49de655        rancher                    
+e99eaeff8999        drupal                     
+12725c7f68f9        nginx                      
+3b0ea005351c        App01                      
+44c80911220f        nuxeo                      
+d3195e6bd55a        mongo                      
+4da9bb2dd5aa        ls-server                  0.0.0.0:80->8080/tcp
+14cebbf8241c        nginx200mb                 0.0.0.0:8080->80/tcp
+c6d1833148f4        nginxCPU                   0.0.0.0:8081->80/tcp
 
 ```
 
@@ -106,6 +133,29 @@ function docker () {
 ```
 SAÍDA:<br>
 ```
+CONTAINER ID
+IMAGE
+COMMAND
+CREATED
+STATUS
+PORTS
+NAMES
+
+c6d1833148f4
+nginx
+"/docker-entrypoint.…"
+11 hours ago
+Up 9 minutes
+0.0.0.0:8081->80/tcp
+nginxCPU
+
+14cebbf8241c
+nginx
+"/docker-entrypoint.…"
+11 hours ago
+Up 9 minutes
+0.0.0.0:8080->80/tcp
+nginx200mb
 
 ```
 
@@ -121,6 +171,9 @@ function docker () {
 ```
 SAÍDA:<br>
 ```
+CONTAINER ID        IMAGE               COMMAND                  CREATED             STATUS              PORTS                  NAMES
+c6d1833148f4        nginx               "/docker-entrypoint.…"   11 hours ago        Up 10 minutes       0.0.0.0:8081->80/tcp   nginxCPU
+14cebbf8241c        nginx               "/docker-entrypoint.…"   11 hours ago        Up 10 minutes       0.0.0.0:8080->80/tcp   nginx200mb
 
 ```
 
@@ -136,5 +189,13 @@ function docker () {
 ```
 SAÍDA:<br>
 ```
+CONTAINER ID        IMAGE                            COMMAND                  CREATED             STATUS                      PORTS               NAMES
+12725c7f68f9        nginx                            "/docker-entrypoint.…"   12 hours ago        Exited (0) 11 hours ago                         nginx
+1bb866edd983        jenkins/jenkins                  "/sbin/tini -- /usr/…"   12 hours ago        Exited (143) 11 hours ago                       jenkins
+ab9317a045ca        postgres:10                      "docker-entrypoint.s…"   12 hours ago        Exited (0) 11 hours ago                         postgres
+d3195e6bd55a        mongo                            "docker-entrypoint.s…"   26 hours ago        Exited (0) 11 hours ago                         mongo
+79c1b49de655        rancher/server                   "/usr/bin/entry /usr…"   29 hours ago        Exited (0) 29 hours ago                         rancher
+c81e8baea872        phpmyadmin/phpmyadmin            "/docker-entrypoint.…"   2 days ago          Exited (0) 37 hours ago                         phpmyadmin
+416df0ec470d        mysql:5.7                        "docker-entrypoint.s…"   2 days ago          Exited (0) 29 hours ago                         mysql.5.7
 
 ```
