--- a/09.Volume.md
+++ b/09.Volume.md
@@ -12,3 +12,26 @@ Remover volumes pendentes:<br>
 docker volume prune
 docker volume ls -f dangling=true
 ```
+# Trabalhando com volumes
+
+Vamos criar um volume<br>
+```
+docker volume ls
+docker volume create mysql.5.7
+```
+
+Agora iremos atribuir o volume ao container<br>
+```
+docker run \
+    -d \
+    -p 3306:3306 \
+    -e MYSQL_ROOT_PASSWORD=my-password \
+    -e MYSQL_USER=root \
+    -e MYSQL_PASSWORD=my-password \
+    -v mysql.5.7:/var/lib/mysql \
+    --network mysql \
+    --name mysql.5.7 \
+    mysql:5.7
+```
+
+ad8
