--- a/09.Volume.md
+++ b/09.Volume.md
@@ -1,3 +1,16 @@
+# Como funciona
+Ao criar um caontainer o docker cria um volume de nome aleatório<br>
+
+## Como saber onde estão meus dados
+O item Mounts.Source indica a pasta que os dados estão<br>
+```
+docker inspect <id>
+```
+Para facilitar poderá mostrar só o item que deseja<br>
+```
+docker inspect -f '{{json .Mounts}}' <id>
+```
+
 Listar volumes:<br>
 ```
 docker volume ls
