--- a/15.Swarm.md
+++ b/15.Swarm.md
@@ -1,7 +1,28 @@
 # O que é Swarm?
 .<br>
 
-# Iniciando swarm
+# Criar swarm
+Com o comando a seguir ele inicia como manager.<br>
 ```
-docker swarm init --advertise-addr 192.168.1.106
+docker swarm init --advertise-addr <ip-interno>
+```
+## Verifica se foi criado
+```
+docker node ls
+```
+## Adicionar worker
+Digitar o comando no principal para pegar o token.<br>
+```
+docker swarm join-token worker
+```
+
+## Adicionar o manager
+Copie e cole no outro nó<br>
+```
+docker swarm join-token manager
+```
+## Iniciar nova rede
+```
+docker network create -d overlay interna
+docker network ls
 ```
