--- a/09.Volume.md
+++ b/09.Volume.md
@@ -75,3 +75,9 @@ su
 cd /var/lib/docker/volumes/mysql.5.7/_data
 ```
 Para fazer backup dos dados utiliza o comando docker cp, pois o linux trava a pasta e alguns arquivos.<br>
+Testar:<br>
+```
+ls -la
+sudo chown 1000:1000 -R </nome/da/pasta/> -R
+ls -la
+```
