--- a/14.Monitoramento.md
+++ b/14.Monitoramento.md
@@ -1,5 +1,65 @@
-Verficar<br>
+# Instalação CentOS
+## Git
+```
+sudo yum install git
+```
 
+Caso ainda não tenha instalado o docker:<br>]
+```
+curl -fsSL https://get.docker.com | bash
+```
+### Clonar o projeto
+```
+git clone https://github.com/badtuxx/giropops-monitoring.git
+```
+### Ajustar a interação com o Slack
+```
+vim conf/alertmanager/config.yml
+```
+Preencha:<br>
+username(usuario), channel (#algumaCoisa), api_url(webhook... algo como https://hooks.slack.com/services/.../...)<br>
+
+## Netdata
+```
+bash <(curl -Ss https://my-netdata.io/kickstart.sh)
+```
+Agora acesse o localhost:19999<br>
+
+## Prometheus
+### Configurar
+```
+vim conf/prometheus/prometheus.yml
+```
+Na última linha em static_configs: -targets:[localhost:19999]
+
+## Docker Composer
+### Fazer o Deploy
+```
+docker swarm init
+cat docker-compose.yml
+docker stack deploy -c docker-compose.yml giropops
+```
+
+### Verifica se subiu
+```
+docker service ls
+```
+Acessar o prometheus em localhost:9090<br>
+Acessar o alert manager em localhost:9093<br>
+Acessar o alert grafana em localhost:3000, user admin, senha giropops<br>
+Acessar o alert node exporter em localhost:9100/metrics<br>
+
+### Iniciando o docker swarm
+```
+docker swarm init
+```
+
+## Alerts
+```
+cat conf/prometheus/alert.rules
+```
+
+Verficar<br>
 ```
 watch -n 2 'docker ps --format "table {{.ID}}\t {{.Image}}\t {{.Status}}"'
 ```
