--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -1,3 +1,96 @@
+# Criando uma rede
+```
+docker network \
+  -d \
+  bridge \
+  --subnet 172.18.0.0/16 \
+  --gateway 172.18.0.1 \
+  net.172.18
+```
+
+# Conectando duas redes
+## Crie a primeira rede
+```
+docker network \
+  -d \
+  bridge \
+  --subnet 172.30.0.0/16 \
+  --gateway 172.30.0.1 \
+  net.172.30
+```
+
+## Crie a segunda rede
+```
+docker network \
+  -d \
+  bridge \
+  --subnet 172.31.0.0/16 \
+  --gateway 172.31.0.1 \
+  net.172.31
+```
+
+## Crie um container na primeira rede
+```
+docker run \
+    -d \
+    -p 3306:3306 \
+    -e MYSQL_ROOT_PASSWORD=my-password \
+    -e MYSQL_USER=root \
+    -e MYSQL_PASSWORD=my-password \
+    --network net.172.30 \
+    --name mysql.5.7 \
+    mysql:5.7
+```
+
+
+## Crie um container na segunda rede
+```
+docker run \
+    -d \
+    -p 8080:80 \
+    -e PMA_HOST=mysql.5.7 \
+    --network net.172.31 \
+    --name phpmyadmin \
+    phpmyadmin/phpmyadmin
+```
+## Conectar os dois containers
+Na verdade a conexão é a inclusão do container desejado na rede que o container alvo está. Consequentemente ele consegue acessar todos os outros containers.<br>
+```
+docker network container connect net.172.30 phpmyadmin
+```
+
+## Desconectando um container de uma rede
+```
+docker network container disconnect net.172.30 phpmyadmin
+```
+
+# Atribuindo IP estático
+
+## Criear a rede
+```
+docker network \
+  -d \
+  bridge \
+  --subnet 172.40.0.0/16 \
+  --gateway 172.40.0.1 \
+  net.172.40
+```
+
+## Criar um container dentro da rede com o IP
+```
+docker run \
+  -d \
+  -p 8080:80 \
+  --name mginx \
+  --network net.172.40 \
+  --ip 172.40.0.100 \
+  nginx
+```
+## Mudar o IP de um container já criado
+```
+.
+```
+
 ```
 docker run -it busybox
 ```
