--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -65,8 +65,7 @@ docker network container disconnect net.172.30 phpmyadmin
 ```
 
 # Atribuindo IP estático
-
-## Criear a rede
+## Criar a rede
 ```
 docker network \
   -d \
@@ -90,6 +89,15 @@ docker run \
 ```
 .
 ```
+## Criar um container isolado
+```
+docker run \
+  -d \
+  --name mginx.isolated \
+  --network none \
+  nginx
+```
+
 
 ```
 docker run -it busybox
