--- a/00.ComandosLinux.md
+++ b/00.ComandosLinux.md
@@ -1,3 +1,10 @@
+# Sistema Operacional
+Ver qual o sistema está operando<br>
+```
+lsb_release -a
+```
+# Outros comandos
+
 Mudar de diretório.<br>
 ```
 cd diretorio
