--- a/01.Install.md
+++ b/01.Install.md
@@ -1,10 +1,15 @@
 # Instalação do Docker
-https://docs.docker.com/engine/install/ubuntu/
+https://docs.docker.com/engine/install/ubuntu/<br>
+
+## Verificar se já está instalado
+```
+docker -v
+```
 
 ## No CentOS
 ### Instalação do Sistema Operacional
 Baixar a ISO<br>
-http://isoredirect.centos.org/centos/7/isos/x86_64/
+http://isoredirect.centos.org/centos/7/isos/x86_64/<br>
 
 Exclua as partições do Disco<br>
 Selecione Servidor com GUI<br>
