--- a/02.Producao.md
+++ b/02.Producao.md
@@ -1,10 +1,23 @@
 # Iniciar Docker com a máquina
+## Verificar o status
 ```
 sudo systemctl status docker
+```
+
+## Iniciar e habilitar
+```
 sudo systemctl start docker
-sudo systemctl stop docker
-sudo systemctl restart docker
 sudo systemctl enable docker
+```
+
+## Parar
+```
+sudo systemctl stop docker
+```
+
+## Reiniciar
+```
+sudo systemctl restart docker
 ```
 
 ## Subir automaticamente a imagem com o sistema
