--- a/02.Producao.md
+++ b/02.Producao.md
@@ -3,6 +3,17 @@
 ```
 sudo systemctl status docker
 ```
+Para ter certeza que o docker irá reiniciar com a máquina faremos um teste:<br>
+```
+sudo systemctl start docker
+docker ps
+reboot
+```
+Após reiniciar verifique se está rodando:<br>
+```
+sudo systemctl status docker
+```
+
 
 ## Iniciar e habilitar
 ```
