--- a/02.Producao.md
+++ b/02.Producao.md
@@ -6,6 +6,7 @@ sudo systemctl status docker
 Para ter certeza que o docker irá reiniciar com a máquina faremos um teste:<br>
 ```
 sudo systemctl start docker
+sudo systemctl status docker
 docker ps
 reboot
 ```
@@ -13,7 +14,20 @@ Após reiniciar verifique se está rodando:<br>
 ```
 sudo systemctl status docker
 ```
-
+Verá que o docker está parado e desabilitado.<br>
+Iremos habilitar.<br>
+```
+sudo systemctl enable docker
+```
+Verifique que foi habilitado, mas ainda está parado.<br>
+```
+sudo systemctl status docker
+```
+Para iniciar basta reiniciar a máquina, daí terá certeza que o docker reiniciará com a máquina.<br>
+```
+reboot
+sudo systemctl status docker
+```
 
 ## Iniciar e habilitar
 ```
