--- a/17.InstallCentOS.md
+++ b/17.InstallCentOS.md
@@ -13,3 +13,8 @@ Traduzindo: Adicionar (add) o endereço (a) ip (ip) 192.168.1.105 no dispositivo
 ```
 ip a add 192.168.1.105 dev wlp2s0
 ```
+Reinicie a placa de rede<br>
+```
+ip link set dev wlp2s0 down
+ip link set dev wlp2s0 up
+```
