--- a/18.CheatSheet.md
+++ b/18.CheatSheet.md
@@ -3,7 +3,7 @@ Fazer com que todos os containers reiniciem automaticamente<br>
 ```
 docker inspect -f "{{ .HostConfig.RestartPolicy }}" $(docker ps -q)
 ```
-Iniciar Container com o Docker<br>
+Iniciar todos os Containers com o Docker<br>
 ```
-docker update --restart=always id
+docker update --restart=always $(docker ps -q)
 ```
