--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -1,6 +1,37 @@
 # Padrão
 Instale as opções padrões<br>
 
+# Acesso Remoto
+https://phoenixnap.com/kb/ssh-to-connect-to-remote-server-linux-or-windows<br>
+## Instalar
+Digite no terminal:<br>
+```
+ssh
+sudo apt-get install openssh-client
+ssh localhost
+sudo apt-get install openssh-server ii.
+sudo service ssh status
+ssh localhost
+```
+## Mudar configurações
+```
+sudo nano /etc/ssh/sshd_config
+sudo service ssh restart
+```
+Obs: Caso não tenha o nano:<br>
+```
+sudo apt-get install nano
+```
+## Acessando via terminal de outro linux
+```
+ssh your_username@host_ip_address
+```
+
+Especificando a porta<br>
+```
+ssh phoenixnap@185.52.53.222 –p7654
+```
+
 ## Tranformando seu Ubuntu num servidor com DNS
 Acesse https://www.noip.com/ e faça uma conta<br>
 
