--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -70,3 +70,9 @@ para rodar digite
 ### Instalando o Docker
 Caso ainda náo tenha instalado o Docker, acesse o link abaixo?<br>
 https://github.com/renatomportugal/docker/blob/master/01.Install.md#no-ubuntu<br>
+
+### Testar
+Instale o Container abaixo e acesse o seu endere;o na internet. Verá que funcionou...<br>
+```
+docker run -d -p 80:80 --restart=always nginx
+```
