--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -1,7 +1,7 @@
 # Padrão
 Instale as opções padrões<br>
 
-# Acesso Remoto
+# Acesso Remoto via SSH (acesso ao terminal)
 https://phoenixnap.com/kb/ssh-to-connect-to-remote-server-linux-or-windows<br>
 ## Instalar
 Digite no terminal:<br>
@@ -75,4 +75,18 @@ https://github.com/renatomportugal/docker/blob/master/01.Install.md#no-ubuntu<br
 Instale o Container abaixo e acesse o seu endere;o na internet. Verá que funcionou...<br>
 ```
 docker run -d -p 80:80 --restart=always nginx
+```
+
+# Acesso Remoto via XRDP (acesso ao desktop)
+https://medium.com/@fabianosarmento/como-conectar-%C3%A0-um-servidor-linux-via-remote-desktop-windows-aa5ce95405e8<br>
+```
+sudo apt-get install xrdp
+reboot
+sudo apt-get install xorgxrdp
+reboot
+echo env -u SESSION_MANAGER -u DBUS_SESSION_BUS_ADDRESS mate-session>~/.xsession
+```
+Não Funcionou com o Windows 10, depois testarei.
+```
+
 ```
