--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -5,7 +5,7 @@ docker network \
   bridge \
   --subnet 172.18.0.0/16 \
   --gateway 172.18.0.1 \
-  net.172.18
+  bridge.172.18
 ```
 
 # Conectando duas redes
@@ -16,7 +16,7 @@ docker network \
   bridge \
   --subnet 172.30.0.0/16 \
   --gateway 172.30.0.1 \
-  net.172.30
+  bridge.172.30
 ```
 
 ## Crie a segunda rede
@@ -26,7 +26,7 @@ docker network \
   bridge \
   --subnet 172.31.0.0/16 \
   --gateway 172.31.0.1 \
-  net.172.31
+  bridge.172.31
 ```
 
 ## Crie um container na primeira rede
@@ -37,7 +37,7 @@ docker run \
     -e MYSQL_ROOT_PASSWORD=my-password \
     -e MYSQL_USER=root \
     -e MYSQL_PASSWORD=my-password \
-    --network net.172.30 \
+    --network bridge.172.30 \
     --name mysql.5.7 \
     mysql:5.7
 ```
@@ -49,7 +49,7 @@ docker run \
     -d \
     -p 8080:80 \
     -e PMA_HOST=mysql.5.7 \
-    --network net.172.31 \
+    --network bridge.172.31 \
     --name phpmyadmin \
     phpmyadmin/phpmyadmin
 ```
@@ -81,7 +81,7 @@ docker run \
   -d \
   -p 8080:80 \
   --name mginx \
-  --network net.172.40 \
+  --network bridge.172.40 \
   --ip 172.40.0.100 \
   nginx
 ```
@@ -97,6 +97,15 @@ docker run \
   --network none \
   nginx
 ```
+
+# Organizando os Containers
+## Fazendo a rede
+docker network \
+  -d \
+  bridge \
+  --subnet 66.6.0.0/16 \
+  --gateway 66.6.0.1 \
+  bridge.66.6
 
 
 ```
