--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -1,6 +1,6 @@
 # Criando uma rede
 ```
-docker network \
+docker network create \
   -d \
   bridge \
   --subnet 172.18.0.0/16 \
@@ -11,7 +11,7 @@ docker network \
 # Conectando duas redes
 ## Crie a primeira rede
 ```
-docker network \
+docker network create \
   -d \
   bridge \
   --subnet 172.30.0.0/16 \
@@ -21,7 +21,7 @@ docker network \
 
 ## Crie a segunda rede
 ```
-docker network \
+docker network create \
   -d \
   bridge \
   --subnet 172.31.0.0/16 \
@@ -67,7 +67,7 @@ docker network container disconnect net.172.30 phpmyadmin
 # Atribuindo IP estático
 ## Criar a rede
 ```
-docker network \
+docker network create \
   -d \
   bridge \
   --subnet 172.40.0.0/16 \
@@ -100,12 +100,48 @@ docker run \
 
 # Organizando os Containers
 ## Fazendo a rede
-docker network \
+docker network create \
   -d \
   bridge \
-  --subnet 172.66.0.0/16 \
-  --gateway 172.66.0.1 \
-  bridge.172.66
+  --subnet 66.6.0.0/16 \
+  --gateway 66.6.0.1 \
+  bridge.66.6
+
+## Criando os Containers de banco de dados
+### MySQL 
+docker run \
+    -d \
+    -p 3306:3306 \
+    -e MYSQL_ROOT_PASSWORD=my-password \
+    -e MYSQL_USER=root \
+    -e MYSQL_PASSWORD=my-password \
+    --network bridge.66.6 \
+    --name mysql.5.7 \
+    --ip 66.6.0.5 \
+    --restart=always \
+    mysql:5.7
+
+## Aplicações
+### 8080 - PhpMyAdmin
+docker run \
+    -d \
+    -p 8080:80 \
+    -e PMA_HOST=mysql.5.7 \
+    --network bridge.66.6 \
+    --name phpmyadmin \
+    --ip 66.6.0.15 \
+    --restart=always \
+    phpmyadmin/phpmyadmin
+
+### 8000 - Owncloud
+docker run \
+  -d \
+  -p 8000:80 \
+  --network bridge.66.6 \
+  --name owncloud \
+  --ip 66.6.0.100 \
+  --restart=always \
+owncloud
 
 
 ```
