--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -144,6 +144,7 @@ docker run \
 docker run \
   -d \
   -p 8000:80 \
+  -v /media/ntfs/OC:/var/www/html \
   --network bridge.66.6 \
   --name owncloud \
   --ip 66.6.0.100 \
