--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -110,6 +110,13 @@ docker network create \
 ```
 
 ## Criando os Containers de banco de dados
+
+### Criar os Volumes
+```
+docker volume create owncloud.var.www.html.data
+docker volume create mysql.5.7.var.lib.mysql
+```
+
 ### MySQL
 ```
 docker run \
@@ -118,6 +125,7 @@ docker run \
     -e MYSQL_ROOT_PASSWORD=my-password \
     -e MYSQL_USER=root \
     -e MYSQL_PASSWORD=my-password \
+    -v mysql.5.7.var.lib.mysql:/var/lib/mysql \
     --network bridge.66.6 \
     --name mysql.5.7 \
     --ip 66.6.0.5 \
@@ -144,7 +152,7 @@ docker run \
 docker run \
   -d \
   -p 8000:80 \
-  -v /media/ntfs/OC:/var/www/html \
+  -v owncloud.var.www.html.data:data/OC:data:/var/www/html/data \
   --network bridge.66.6 \
   --name owncloud \
   --ip 66.6.0.100 \
