--- a/05.ContainersNaMesmaRede.md
+++ b/05.ContainersNaMesmaRede.md
@@ -111,13 +111,11 @@ docker network create \
 
 ## Criando os Containers de banco de dados
 
-### Criar os Volumes
+### MySQL
+Criar o volume<br>
 ```
-docker volume create owncloud.var.www.html.data
 docker volume create mysql.5.7.var.lib.mysql
 ```
-
-### MySQL
 ```
 docker run \
     -d \
@@ -132,6 +130,7 @@ docker run \
     --restart=always \
     mysql:5.7
 ```
+d8e
 
 ## Aplicações
 ### 8080 - PhpMyAdmin
@@ -148,18 +147,22 @@ docker run \
 ```
 
 ### 8000 - Owncloud
+Criar o volume<br>
+```
+docker volume create owncloud.var.www.html.data
+```
 ```
 docker run \
   -d \
   -p 8000:80 \
-  -v owncloud.var.www.html.data:data/OC:data:/var/www/html/data \
+  -v owncloud.var.www.html.data:/var/www/html/data \
   --network bridge.66.6 \
   --name owncloud \
   --ip 66.6.0.100 \
   --restart=always \
 owncloud
 ```
-
+64f
 
 ```
 docker run -it busybox
