--- a/ImagensOficiais/onlyoffice-documentserver.5.5
+++ b/ImagensOficiais/onlyoffice-documentserver.5.5
@@ -1,4 +1,10 @@
 https://hub.docker.com/r/onlyoffice/documentserver
 docker pull onlyoffice/documentserver:5.5
 
-sudo docker run -i -t -d -p 8005:80 onlyoffice/documentserver
+docker run \
+  -i \
+  -t \
+  -d \
+  -p 8005:80 \
+  --network mysql \
+  onlyoffice/documentserver
