--- a/19.InstallUbuntu.md
+++ b/19.InstallUbuntu.md
@@ -2,6 +2,22 @@
 Instale as opções padrões<br>
 
 # Acesso Remoto via SSH (acesso ao terminal)
+Digite no terminal:<br>
+```
+apt-get install openssh-server
+service ssh status
+apt-get install nano
+nano /etc/ssh/sshd_config
+service ssh restart
+```
+## Como usar
+```
+ssh usuario@ip-alvo
+ssh usuario@ip-alvo -p numerodaporta
+ssh -l usuario
+```
+
+# Acesso Remoto via SSH (acesso ao terminal)
 https://phoenixnap.com/kb/ssh-to-connect-to-remote-server-linux-or-windows<br>
 ## Instalar
 Digite no terminal:<br>
