--- a/01.Install.md
+++ b/01.Install.md
@@ -139,6 +139,12 @@ reboot
 ```
 
 ### Passo 11
+Verifica se o grupo foi adicionado ao usuário, aparecerá o grupo docker no final.<br>
+```
+groups
+```
+
+### Passo 12
 Para colocar o Docker para produção veja o próximo passo no link abaixo:<br>
 https://github.com/renatomportugal/docker/blob/master/02.Producao.md
 
