--- a/02.Producao.md
+++ b/02.Producao.md
@@ -1,3 +1,80 @@
+# Index
+## Rancher
+80,443   - Rancher - Server<br>
+8001     - Rancher - php:7.1.26-apache<br>
+
+## Containers
+20,21,47400-47470 - bogem/ftp
+3306 - mysql:5.7
+8080 - phpmyadmin/phpmyadmin
+
+# Servidor Padrão
+## Rede
+Verifica se ter a rede bridge.66.6<br>
+```
+docker network ls
+```
+Se não tiver, crie<br>
+```
+docker network create \
+  -d \
+  bridge \
+  --subnet 66.6.0.0/16 \
+  --gateway 66.6.0.1 \
+  bridge.66.6
+```
+Verifique quais IPs estão vagos<br>
+```
+docker network inspect bridge.66.6
+```
+Estou vendo uma forma de melhorar a apresentação dos dados:<br>
+```
+docker network inspect bridge.66.6 -f {{.Containers}}
+```
+
+## Volume
+Verifique quais volumes existem:<br>
+```
+docker volume ls
+```
+Crie o volume para a aplicação (caso saiba qual pasta deseja persistir os dados)<br>
+```
+docker volume create mysql
+```
+Verifique se foi criado<br>
+```
+docker volume ls
+```
+## Banco de dados
+### MySQL
+```
+docker run \
+    -d \
+    -p 3306:3306 \
+    -e MYSQL_ROOT_PASSWORD=my-password \
+    -e MYSQL_USER=root \
+    -e MYSQL_PASSWORD=my-password \
+    -v mysql:/var/lib/mysql \
+    --network bridge.66.6 \
+    --name mysql.5.7 \
+    --ip 66.6.0.5 \
+    --restart=always \
+    mysql:5.7
+```
+### phpmyadmin
+```
+docker run \
+    -d \
+    -p 8080:80 \
+    -e PMA_HOST=mysql.5.7 \
+    --network bridge.66.6 \
+    --name phpmyadmin \
+    --ip 66.6.0.15 \
+    --restart=always \
+phpmyadmin/phpmyadmin
+```
+
+
 # Iniciar Docker com a máquina
 ## Verificar o status
 ```
